--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,14 +57,25 @@ flutter:
   fonts:
     - family: SUIT
       fonts:
-        - asset: fonts/SUIT-Bold.ttf
         - asset: fonts/SUIT-ExtraBold.ttf
-        - asset: fonts/SUIT-ExtraLight.ttf
-        - asset: fonts/SUIT-Heavy.ttf
-        - asset: fonts/SUIT-Light.ttf
-        - asset: fonts/SUIT-Medium.ttf
-        - asset: fonts/SUIT-Regular.ttf
+          weight: 800
+        - asset: fonts/SUIT-Bold.ttf
+          weight: 700
         - asset: fonts/SUIT-SemiBold.ttf
+          weight: 600
+        - asset: fonts/SUIT-Medium.ttf
+          weight: 500
+        - asset: fonts/SUIT-Regular.ttf
+          weight: 400
+        - asset: fonts/SUIT-Light.ttf
+          weight: 300
+        - asset: fonts/SUIT-ExtraLight.ttf
+          weight: 200
+
+
+
+
+
         - asset: fonts/SUIT-Thin.ttf
 
 
