--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,26 +57,22 @@ flutter:
   fonts:
     - family: SUIT
       fonts:
-        - asset: fonts/SUIT-ExtraBold.ttf
+        - asset: assets/fonts/SUIT-ExtraBold.ttf
           weight: 800
-        - asset: fonts/SUIT-Bold.ttf
+        - asset: assets/fonts/SUIT-Bold.ttf
           weight: 700
-        - asset: fonts/SUIT-SemiBold.ttf
+        - asset: assets/fonts/SUIT-SemiBold.ttf
           weight: 600
-        - asset: fonts/SUIT-Medium.ttf
+        - asset: assets/fonts/SUIT-Medium.ttf
           weight: 500
-        - asset: fonts/SUIT-Regular.ttf
+        - asset: assets/fonts/SUIT-Regular.ttf
           weight: 400
-        - asset: fonts/SUIT-Light.ttf
+        - asset: assets/fonts/SUIT-Light.ttf
           weight: 300
-        - asset: fonts/SUIT-ExtraLight.ttf
+        - asset: assets/fonts/SUIT-ExtraLight.ttf
           weight: 200
-
-
-
-
-
-        - asset: fonts/SUIT-Thin.ttf
+        - asset: assets/fonts/SUIT-Thin.ttf
+          weight: 100
 
 
   # The following line ensures that the Material Icons font is
