--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,11 @@ flutter:
           weight: 200
         - asset: assets/fonts/SUIT-Thin.ttf
           weight: 100
+    - family: CustomIcons
+      fonts:
+        - asset: assets/icons/clear.ttf
+        - asset: assets/icons/clear_circle.ttf
+        - asset: assets/icons/flag.ttf
 
 
   # The following line ensures that the Material Icons font is
@@ -81,9 +86,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #  assets:
+  #    - assets/icons/clear_circle.ttf
+  #    - assets/icons/clear_circle.png
+  #    - assets/icons/clear.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
