--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,10 +75,6 @@ flutter:
           weight: 200
         - asset: assets/fonts/SUIT-Thin.ttf
           weight: 100
-  #    - family: CustomIcons
-  #      fonts:
-  #        - asset: assets/icons/
-
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -87,7 +83,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/clear_circle.png
+    - assets/icons/kakao.png
+    - assets/icons/google.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
